# riptilia777

./: .gitignore  REQUIREMENTS.md  backend_test.py
.emergent/: emergent.yml  summary.txt  testing_baseline_commit
Reptiloid-01-main/: .gitignore
Reptiloid-01-main/.emergent/: emergent.yml  summary.txt
Reptiloid-01-main/BIT-10.2-main/: .gitignore
Reptiloid-01-main/BIT-10.2-main/sdk/python/: pyproject.toml
Reptiloid-01-main/BIT-10.2-main/sdk/python/bitarbitr_sdk/: async_client.py  client.py  exceptions.py
Reptiloid-01-main/BIT-9-DOK-main/: .gitignore  INTEGRATION_EXAMPLE.md
Reptiloid-01-main/REP01-main/: .gitignore  ANALYSIS_SPEC_VS_IMPLEMENTATION.md  backend_test.py  design_guidelines.json  test_result.md
Reptiloid-01-main/backend/: server.py
Reptiloid-01-main/frontend/: package-lock.json
Reptiloid-01-main/memory/: PRD.md  REFACTORING_PLAN.md
Reptiloid-01-main/test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json
backend/: .env  requirements.txt  server.py
backend/core/: __init__.py  auth.py  database.py
backend/migrations/: normalize_offers.py
backend/models/: schemas.py
backend/routes/: __init__.py  admin_chats.py  admin_dashboard.py  admin_management.py  admin_management.py.old  admin_users.py  auth.py  forum.py  (+34 more)
docs/: merchant_api.md
frontend/: .env  package.json
memory/: PRD.md  TON_FINANCE_DOCS.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json
tests/: playwright.config.ts
ton-service/: .gitignore  index.js  package-lock.json  package.json
(+617 files in other folders)
