[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitarbitr-sdk"
version = "1.0.0"
description = "Official Python SDK for BITARBITR P2P Payment Gateway"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BITARBITR", email = "support@bitarbitr.org"}
]
keywords = ["bitarbitr", "payment", "p2p", "crypto", "usdt", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
async = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://bitarbitr.org"
Documentation = "https://bitarbitr.org/api/docs"

[tool.setuptools.packages.find]
where = ["."]
